--- a/장고/1019/1019/articles/templates/articles/detail.html
+++ b/장고/1019/1019/articles/templates/articles/detail.html
@@ -23,10 +23,10 @@
   <hr>
   {% for comment in comments %}
     <div>{{ comment.content }}
-      {% comment %} <form action="{% url 'articles:comments_delete' article.pk comment.pk %}" method="POST">
+      <form action="{% url 'articles:comments_delete' article.pk comment.pk %}" method="POST">
         {% csrf_token %}
         <input type="submit" value="DELETE">
-      </form> {% endcomment %}
+      </form>
     </div>
     <hr>
     {% empty %}
